1.14-test.1 BotCommand internal changes (dynamic ephemeral)
- Added TypeOfEphemeral enums in BotCommand between "DEFAULT" and "DYNAMIC"
- Modified constructors to support typeOfEphemeral
- Added CommandResponse record to contain T and a Boolean for message and ephemeral setting respectively
- Added support for CommandResponse
- runCommand now returns CommandResponse<T> instead
- Removed addCommand and any references to it
- Removed various NotNull references
- Added beforeRunCommand
- Updated CommandsHandler slightly to adjust for the removal of addCommand
- Bumped pom.xml